--- a/ShowcaseClient/_Imports.razor
+++ b/ShowcaseClient/_Imports.razor
@@ -9,5 +9,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using ShowcaseClient
-@using ShowcaseClient.Shared
 @using ShowcaseClient.Data
+@using AntDesign
+@using AntDesign.ProLayout
