--- a/ShowcaseClient/wwwroot/css/app.css
+++ b/ShowcaseClient/wwwroot/css/app.css
@@ -28,7 +28,7 @@ body {
         max-width: 400px;
         margin: auto;
         content: ' ';
-        background-image: url('../blazeorbital-logo.svg');
+        /*background-image: url('../absa.svg');*/
         background-size: 100%;
         background-repeat: no-repeat;
         background-position: center 32%;
