--- a/ShowcaseClient/App.razor
+++ b/ShowcaseClient/App.razor
@@ -1,11 +1,11 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layouts.BasicLayout)"/>
-        <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(ShowcaseClient.Layouts.BasicLayout)"/>
+        @*<FocusOnNavigate RouteData="@routeData" Selector="h1"/>*@
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(Layouts.BasicLayout)">
+        <LayoutView Layout="@typeof(ShowcaseClient.Layouts.BasicLayout)">
             <p role="alert">Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
