getting the data now WORKS!

--- a/ShowcaseClient/Components/GlobalHeader/RightContent.razor
+++ b/ShowcaseClient/Components/GlobalHeader/RightContent.razor
@@ -1,27 +1,23 @@
 ﻿@namespace ShowcaseClient.Components
+@using ShowcaseClient.Models
 @inherits AntDesign.AntDomComponentBase
 
 <Space Class="@ClassMapper.Class" Size="@("24")">
-    <SpaceItem>
-        <HeaderSearch Class="action search"
-                      Placeholder="Site Search"
-                      DefaultValue="umi ui"
-                      Options="DefaultOptions" />
-    </SpaceItem>
-    <SpaceItem>
-        <AntDesign.Tooltip Title="@("Help")" > @*Placement="@PlacementType.Bottom"*@
-            <Unbound>
-                <span @ref="@context.Current" class="action">
-                    <Icon Type="question-circle" Theme="outline" />
-                </span>
-            </Unbound>
-        </AntDesign.Tooltip>
-    </SpaceItem>
     
     <SpaceItem>
-        <AvatarDropdown Name="@_currentUser.Name"
-                        Avatar="@_currentUser.Avatar"
-                        MenuItems="@AvatarMenuItems"
-                        OnItemSelected="HandleSelectUser" />
+    
+        <AuthorizeView>
+            <Authorized Context="authUser">
+                <AvatarDropdown Name="@FullUserName"
+                                Avatar="@_currentUser.Avatar"
+                                MenuItems="@AvatarMenuItems"
+                                OnItemSelected="HandleSelectUser" />
+            </Authorized> 
+            <NotAuthorized>
+                <a href="bff/login">Log in</a>
+            </NotAuthorized>
+
+        </AuthorizeView>
+        
     </SpaceItem>
 </Space>
