--- a/ShowcaseClient/Pages/Dashboard/Index.razor
+++ b/ShowcaseClient/Pages/Dashboard/Index.razor
@@ -1,108 +1,73 @@
 ﻿@page "/"
+@using System.Security.Claims
+@using BlazorShowcase.Data
 
-@inject DataSynchronizer _dataSynchronizer
-@implements IDisposable
+<AuthorizeView>
+    <Authorized Context="authUser">
 
-<div>
-    <AuthorizeView>
-        <Authorized Context="auth">
-            <SyncStatus />
-
-            <PageContainer Title="Scores">
-                <Breadcrumb>
-                    <Breadcrumb>
-                        <BreadcrumbItem>Home</BreadcrumbItem>
-                        <BreadcrumbItem>Dashboard</BreadcrumbItem>
-                        <BreadcrumbItem>Scores </BreadcrumbItem>
-                    </Breadcrumb>
-                </Breadcrumb>
-                <ChildContent>
-                    <div class="standardList">
-                        <Card>
-                            <Row Gutter="24">
-                                <AntDesign.Col Sm="8" Xs="24">
-                                    @Info("Total number of scores synced", _total.ToString(), true)
-                                </AntDesign.Col>
-                                
-                                <AntDesign.Col Sm="8" Xs="24">
-                                    @Info("Scores over risk 750", _totalOver750.ToString(), true)
-                                </AntDesign.Col>
-                                
-                                <AntDesign.Col Sm="8" Xs="24">
-                                    @Info("Total scores in local database", _totalInLocalDb.ToString(), true)
-                                </AntDesign.Col>
-                            </Row>
-                        </Card>
-
-                        <Card Class="listCard"
-                              Title="Scores"
-                              Style="margin-top: 24px;"
-                              BodyStyle="padding: 0 32px 40px 32px">
+        <PageContainer Title="Home">
+            <ChildContent>
+                <Row Gutter="24">
+                    <AntDesign.Col Xl="16" Lg="24" Md="24" Sm="24" Xs="24">
+                        <Card Class="projectList"
+                              Style="margin-bottom: 24px;"
+                              Title="Get some data using gRPC"
+                              BodyStyle="padding: 5px;">
                             <ChildContent>
 
-                                @if (db is not null)
+                                <button class="btn btn-primary" @onclick="GetData">Get some data over gRPC</button>
+                                
+                                @if (_scores.Any())
                                 {
-                                    <div class="score-grid">
-                                        <Grid Virtualize="true" Items="@GetFilteredScores()" ItemKey="@(x => x.Id)" ItemSize="35">
-
-                                            <PropertyColumn Title="Id" Property="@(x => x.Id)" Align="Align.Left" Class="col-category" />
-                                            
-                                            <PropertyColumn Title="Created" Property="@(x => x.CreatedOnDateTime)" Format="d.M.yyyy HH:mm" Align="Align.Left" Class="col-location" />
-                                            
-                                            <PropertyColumn Title="UserName" Property="@(x => x.UserName)" Class="col-name">
-                                                <ColumnOptions>
-                                                    <input @bind="searchUserName" @bind:event="oninput" type="search" placeholder="Search..." />
-                                                </ColumnOptions>
-                                            </PropertyColumn>
-                                            
-                                            <PropertyColumn Title="Full Name" Property="@(x => x.FullName)" Class="col-name" >
-                                                <ColumnOptions>
-                                                    <input @bind="searchFullName" @bind:event="oninput" type="search" placeholder="Search..." />
-                                                </ColumnOptions>
-                                            </PropertyColumn>
-                                            
-                                            <PropertyColumn Title="IP Address" Property="@(x => x.IpAddress)" Align="Align.Left" Class="col-location" />
-                                            
-                                            <PropertyColumn Title="City" Property="@(x => x.City)" Align="Align.Left" Class="col-location"/>
-                                            
-                                            <TemplateColumn Title="Risk Score" Align="Align.Right" Class="col-risk-score">
-                                                <ChildContent>
-                                                    <ShowcaseClient.Components.ScoreProgressBar Score="@context.RiskScore" WidthInPixels="200" />
-                                                </ChildContent>
-                                                
-                                                <ColumnOptions>
-                                                    <p>Min score</p>
-                                                    <input type="range" @bind="minScore" @bind:event="oninput" min="0" max="1000" />
-                                                    <p>Max score</p>
-                                                    <input type="range" @bind="maxScore" @bind:event="oninput" min="0" max="1000" />
-                                                </ColumnOptions>
-                                                
-                                            </TemplateColumn>
-                                        </Grid>
-                                    </div>
+                                    <AntList DataSource="@_scores" TItem="Score">
+                                        <ListItem>
+                                            <ListItemMeta Description="@context.IpAddress">
+                                                <TitleTemplate>
+                                                    @context.FullName
+                                                </TitleTemplate>
+                                            </ListItemMeta>
+                                        </ListItem>
+                                    </AntList>
                                 }
 
                             </ChildContent>
                         </Card>
-                    </div>
-                </ChildContent>
-            </PageContainer>
+                        
+                    </AntDesign.Col>
+                    <AntDesign.Col Xl="8" Lg="24" Md="24" Sm="24" Xs="24">
+                        <Card Style="margin-bottom: 24px;"
+                              Title="Logged in user claims"
+                              BodyStyle="padding: 1px;">
+                            
+                            
+                            <AntList DataSource="@authUser.User.Claims" TItem="Claim">
+                                <ListItem>
+                                    <ListItemMeta Description="@context.Value">
+                                        <TitleTemplate>
+                                            @context.Type
+                                        </TitleTemplate>
+                                    </ListItemMeta>
+                                </ListItem>
+                            </AntList>
 
-        </Authorized>
+                        </Card>
+                        
+                    </AntDesign.Col>
+                </Row>
 
-        <NotAuthorized>
-            <PageContainer Title="Not authorized">
-                <ChildContent>
-                    <Card Title="Not authorized" Style="margin-top: 24px;" BodyStyle="padding: 0 32px 40px 32px">
-                        <ChildContent>
-                            <h1>
-                                Please log in to see any data here.
-                            </h1>
-                        </ChildContent>
-                    </Card>
-                </ChildContent>
-            </PageContainer>
-        </NotAuthorized>
-    </AuthorizeView>
+            </ChildContent>
+        </PageContainer>
 
-</div>
+    </Authorized>
+
+    <NotAuthorized>
+        <Result Status="403"
+                IsShowIcon="false"
+                Title="Nudge nudge, wink wink, log in!">
+
+            <div class="d-flex justify-content-center">
+                <img src="abMjEpr_700bwp.webp" />
+            </div>
+        </Result>
+    </NotAuthorized>
+</AuthorizeView>
